<resources>
    <string name="statistics">Statistics</string>
    <string name="app_name">Surgical Scores</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="diagnose_patient">Diagnose Patient</string>
    <string name="manage_diagnosis">Manage Diagnosis</string>
    <string name="manage_patients">Manage Patients</string>
    <string name="filter_by_index">Filter by index</string>
    <string name="all">All</string>
    <string name="loading">Loading...</string>
    <string name="log_in">Log in</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name_or_email">User name or email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="or">or</string>
    <string name="sign_in">Sign in</string>
    <string name="authors">Authors</string>
    <string name="app_name_version">AMIScore 1.0</string>
    <string name="app_desc">An app for easy and reliable diagnose of surgical related diseases</string>
	<string name="high_probability">High chance</string>
	<string name="very_high_probability">Very high chance</string>
	<string name="low_probability">Low chance</string>
    <string name="snackbar_text">Diagnose removed</string>
    <string name="snackbar_action">UNDO</string>
    <string name="index_ribbon">Loaded index</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="dialog_save_diagnosis_TITLE">Save Diagnosis</string>
    <string name="dialog_save_diagnosis_SAVE">Save</string>
    <string name="dialog_save_diagnosis_CANCEL">cancel</string>
    <string name="dialog_save_diagnosis_QR">Scan QR</string>
    <string name="dialog_save_diagnosis_input_name">Name</string>
    <string name="dialog_save_diagnosis_ID">ID</string>
    <string name="toast_save_diagnosis_success">Diagnosis Saved!</string>
    <string name="toast_save_diagnosis_failed">Diagnosis Not Saved!</string>
    <string name="dialog_save_diagnosis_input_name_error">Name cannot be empty</string>
    <string name="dialog_save_diagnosis_input_ID_error">ID must be 11 digits long</string>
    <string name="dialog_remove_one_diagnosis_TITLE">Delete Diagnosis</string>
    <string name="dialog_remove_multiple_diagnosis_TITLE">Delete Diagnostics</string>
    <string name="dialog_remove_one_diagnosis_MESSAGE">Are you sure you want to delete the diagnostic selected?</string>
    <string name="dialog_remove_diagnosis_DELETE">Delete</string>
    <string name="dialog_remove_multiple_diagnosis_MESSAGE">Are you sure you want to delete the diagnostics selected?</string>
    <string name="toast_criteria">You must select any variable!</string>
    <string name="dialog_save_diagnosis_input_observations">Observations</string>
    <string name="dialog_edit_detail_button_Edit">Edit</string>
    <string name="dialog_edit_detail_Title">Diagnosis</string>
    <string name="dialog_edit_detail_Button">Ok</string>
    <string name="item_selectAll">Select all</string>
    <string name="lang">Español</string>
    <string name="crams_crit_serious">Serious</string>
    <string name="crams_crit_not_serious">Not serious</string>
    <string name="crams_section_one">Circulation</string>
    <string name="crams_section_two">Breathing</string>
    <string name="crams_section_three">Abdomen and chest</string>
    <string name="crams_section_four">Sounds</string>
    <string name="crams_section_one_crit1">Capillary filler and TAS>99mmHg</string>
    <string name="crams_section_one_crit2">Slow capillary filler or TAS between 85 and 99 mmHg</string>
    <string name="crams_section_two_crit1">Normal</string>
    <string name="crams_section_two_crit2">Abnormal</string>
    <string name="crams_section_two_crit3">Absent</string>
    <string name="crams_section_three_crit1">Painless abdomen and chest</string>
    <string name="crams_section_three_crit2">Painful abdomen or chest</string>
    <string name="crams_section_three_crit3">Stiff abdomen, rib volet or penetrating wound</string>
    <string name="crams_section_four_crit1">Painless abdomen and chest</string>
    <string name="crams_section_four_crit2">Confusing or inappropiate responses</string>
    <string name="crams_section_four_crit3">Incomprehensible or absent sounds</string>
    <string name="crams_section_one_crit3">Absence of capillary filler or TAS<![CDATA[<85mmgg]]></string>
    <string name="Balthazar_section_one">Pancreatic inflammation</string>
    <string name="Balthazar_section_two">Pancreatic necrosis</string>
    <string name="Balthazar_section_one_crit1">Normal pancreas</string>
    <string name="Balthazar_section_one_crit2">Focal or diffuse enlargement of the pancreas</string>
    <string name="Balthazar_section_one_crit3">Intrinsic pancreatic abnormalities with inflammatory changes in peripancreatic fat</string>
    <string name="Balthazar_section_one_crit4">Unique accumulation of fluid or phlegmon</string>
    <string name="Balthazar_section_one_crit5">Two or more collections of fluid or gas in or adjacent to the pancreas</string>
    <string name="Balthazar_section_two_crit1">None</string>
    <string name="Balthazar_section_two_crit2"><![CDATA[≤30%]]></string>
    <string name="Balthazar_section_two_crit3">30-50%</string>
    <string name="Balthazar_section_two_crit4"><![CDATA[>50%]]></string>
    <string name="Balthazar_crit_good_diagnose">Good prognosis</string>
    <string name="Balthazar_crit_reserved_diagnose">Reserved forecast</string>
    <string name="Balthazar_crit_bad_diagnose">Bad prognosis</string>
    <string name="trauma_category">Trauma</string>
    <string name="abdomen_agudo_category">Acute abdomen: </string>
    <string name="pancreatitis_category">Pancreatitis</string>
    <string name="isquemia_mesenterica_aguda_category">Acute mesenteric ischemia</string>
    <string name="apendicitis_category">Appendicitis</string>
    <string name="peritonitis_category">Peritonitis</string>
    <string name="CRAMS_index">CRAMS scale</string>
    <string name="CTSI_index">CTSI index</string>
    <string name="criterios_de_ramson_no_biliares_index">Criterios de Ramson no biliares</string>
    <string name="criterios_de_ramson_biliares_index">Criterios de Ramson biliares</string>
    <string name="Mannheim_index">Mannheim index</string>
    <string name="escala_alvarado">Alvarado scale</string>
    <string name="Balthazar_index">Balthazar index</string>
    <string name="PediatricTS_section1">Peso corporal</string>
    <string name="PediatricTS_section2">Función respiratoria</string>
    <string name="PediatricTS_section3">Presión arterial sistólica</string>
    <string name="PediatricTS_section4">Sistema nervioso central</string>
    <string name="PediatricTS_section5">Heridas</string>
    <string name="PediatricTS_section6">Lesione sesqueléticas</string>
    <string name="PediatricTS_section1_crit1">0>20 kg</string>
    <string name="PediatricTS_section1_crit2">10-20 kg</string>
    <string name="PediatricTS_section1_crit3"><![CDATA[0<30 kg]]></string>
    <string name="PediatricTS_section2_crit1">Normal</string>
    <string name="PediatricTS_section2_crit2">Dificultada</string>
    <string name="PediatricTS_section2_crit3">Ausente</string>
    <string name="PediatricTS_section3_crit1">0>90 mmHg</string>
    <string name="PediatricTS_section3_crit2">90-50 mmHg</string>
    <string name="PediatricTS_section3_crit3"><![CDATA[0<50 mmHg]]></string>
    <string name="PediatricTS_section4_crit1">Normal</string>
    <string name="PediatricTS_section4_crit2">Obnubilado</string>
    <string name="PediatricTS_section4_crit3">Coma o descerebración</string>
    <string name="PediatricTS_section5_crit1">No</string>
    <string name="PediatricTS_section5_crit2">Menores</string>
    <string name="PediatricTS_section5_crit3">Mayores o penetrantes</string>
    <string name="PediatricTS_section6_crit1">No</string>
    <string name="PediatricTS_section6_crit2">Fractura cerrada</string>
    <string name="PediatricTS_section6_crit3">Fractura abierta o fracturas múltiples</string>
    <string name="PediatricTS_diagnose1">Paciente no recuperable</string>
    <string name="PediatricTS_diagnose2">Paciente con peligro de muerte inminente</string>
    <string name="PediatricTS_diagnose3">Paciente con poco peligro de muerte</string>
    <string name="PediatricTS_diagnose4">Paciente sin peligro de muerte</string>
    <string name="alvarado_index_crit1">Dolor migratorio en la FID</string>
    <string name="alvarado_index_crit2">Náuseas y vómitos</string>
    <string name="alvarado_index_crit3">Anorexia</string>
    <string name="alvarado_index_crit4">Defensa en la FID</string>
    <string name="alvarado_index_crit5">Fiebre mayor de 37 °C </string>
    <string name="alvarado_index_crit6">Descompresión dolorosa</string>
    <string name="alvarado_index_crit7">Leucositosis(>10000)</string>
    <string name="alvarado_index_crit8">Desviación de neutrófilos a la izquierda</string>
    <string name="alvarado_index_diagnose1">Riesgo bajo</string>
    <string name="alvarado_index_diagnose2">Riesgo medio</string>
    <string name="alvarado_index_diagnose3">Riesgo alto</string>
    <string name="mannheim_index_crit1">Edad >50 años</string>
    <string name="mannheim_index_crit2">Sexo femenino</string>
    <string name="mannheim_index_crit3">Disfunciones orgánicas</string>
    <string name="mannheim_index_crit4">Enfermedad neoplástica</string>
    <string name="mannheim_index_crit5">Período preoperatorio >24 horas</string>
    <string name="mannheim_index_crit6">Orígen no cólico</string>
    <string name="mannheim_index_crit7">Peritonitis generalizada</string>
    <string name="mannheim_index_crit8">Líquido cetrino</string>
    <string name="mannheim_index_crit9">Líquido turbio o purulento</string>
    <string name="mannheim_index_crit10">Peritonitis estercolácea</string>
    <string name="mannheim_index_diagnose1">Baja mortalidad</string>
    <string name="mannheim_index_diagnose2">Mortalidad intermedia</string>
    <string name="mannheim_index_diagnose3">Alta mortalidad</string>
    <string name="ranson_nobiliar_biliar_indexes_sect0">En la presentacion</string>
    <string name="ranson_nobiliar_biliar_indexes_sect1">Pasadas 48h del ingreso</string>
    <string name="ranson_nobiliar_index_sect1_crit1">Edad >55 años</string>
    <string name="ranson_nobiliar_index_sect1_crit2">Glucemia >200mg/dL</string>
    <string name="ranson_nobiliar_index_sect1_crit3">Leucositos >16000 células/mm³</string>
    <string name="ranson_nobiliar_index_sect1_crit4">Concentración de lactato deshidrogenasa >350 UI/L</string>
    <string name="ranson_nobiliar_index_sect1_crit5">Concentración de aspartato aminotransferasa >250 UI/L</string>
    <string name="ranson_nobiliar_index_sect2_crit1">Hematocrito reducido >10% (comparado con el valor de ingreso)</string>
    <string name="ranson_nobiliar_index_sect2_crit2"><![CDATA[Concentración sérica de calcio<8 mg/dL]]> </string>
    <string name="ranson_nobiliar_index_sect2_crit3">Deficiencia de bases >4 mEq/L</string>
    <string name="ranson_nobiliar_index_sect2_crit4">Concentración sanguínea de nitrógeno ureico aumentada >5 mg/dL</string>
    <string name="ranson_nobiliar_index_sect2_crit5">Necesidad de líquido >1L </string>
    <string name="ranson_nobiliar_index_sect2_crit6"><![CDATA[PaO2<60 mm Hg]]></string>
    <string name="ranson_nobiliar_index_diagnose1">No mortalidad</string>
    <string name="ranson_nobiliar_index_diagnose2">Baja mortalidad</string>
    <string name="ranson_nobiliar_index_diagnose3">Moderarda mortalidad</string>
    <string name="ranson_nobiliar_index_diagnose4">Alta mortalidad</string>
</resources>